--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "@yo1dog/cerror",
   "version": "2.1.1",
   "description": "Chainable Errors",
-  "type": "commonjs",
+  "type": "module",
   "main": "dist/cerror.js",
   "types": "dist/cerror.d.ts",
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=18.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx tsc -p . --noEmit && npx eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint .",
     "build": "tsc",
     "clean": "rm -rf dist",
     "prepack": "npm run clean && npm run build"
@@ -26,10 +25,6 @@
   },
   "homepage": "https://github.com/yo1dog/node-cerror#readme",
   "devDependencies": {
-    "@types/node": "^14.14.20",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "eslint": "^7.17.0",
-    "typescript": "^4.1.3"
+    "@types/node": "18.0.0"
   }
 }
