--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,15 @@
 {
   "compilerOptions": {
-    "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
-    "module": "CommonJS",
-    "target": "ES2019",
-    "esModuleInterop": true,
+    "lib": ["es2023"],
+    "module": "node16",
+    "target": "es2022",
     "strict": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "maxNodeModuleJsDepth": 0,
-    "moduleResolution": "Node",
+    "moduleResolution": "node16",
+    "erasableSyntaxOnly": true,
+    "esModuleInterop": false,
     "outDir": "dist",
-    "declaration": true,
-    "sourceMap": true
+    "declaration": true
   },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src"]
 }
